hphp/test/slow/parser/foreach-bad5.php.expectf
HipHop Fatal error: Can't use return value in write context in %s/test/slow/parser/foreach-bad5.php on line 5
